Fix contrast ratio (wasn't 3:1)

--- a/static/css/changelog.css
+++ b/static/css/changelog.css
@@ -10,7 +10,7 @@ main#changelog {
   overflow-y: scroll;
 }
 code {
-  background-color: rgba(115, 111, 114, 0.6);
-  color: #ffffff;
+  background-color: rgba(181, 181, 181, 0.6);
+  color: #6f685b;
   padding: 1px 8px;
 }
